# CPP-CONCEPT

DesignPattern/: SOLID.cpp  SingletonDesignPattern.cpp  out  practice_Abs_Fac.cpp  practice_Adapter.cpp  practice_Builder.cpp  practice_Fact.cpp  practice_Obeserver.cpp  practice_Singleton.cpp  practice_Strategy.cpp
DesignPattern/Behavior/: ObserverDesign.cpp  ObserverDesign.readme  StrategyDesign.cpp  StrategyDesign_readme.json  out
DesignPattern/Creational/: AbstractFactory.cpp  AbstractFactoryMethod_readme.json  Builder.cpp  (+5 more)
GTEST/: CMakeLists.txt  Readme.txt  demo.cpp
GTEST/include/: myFirstProgram.h  my_math.h  stack.h
GTEST/src/: math.cpp  myFirstProgram.cpp  stack.cpp
GTEST/tests/: test_Google_frame.cpp  test_GooogleMock.cpp  test_Stack_Fixture.cpp  test_math.cpp  test_myFirstProgram.cpp
INTERVIEW_ASKED_QUESTIONS/: Composition_Agrregation.cpp  Diamond_problem.cpp  File.cpp  Friend_Function.cpp  Name_Space.cpp  New_Delete_Operator_Overloading.cpp  OperatorOverloading.cpp  OwnStringClass.cpp  Own_String.cpp  Own_Unique_ptr.cpp  Own_shared_ptr.cpp  PayMentMethod_Design.cpp  QAIA_Questions.txt  SOLID_PRINCIPLE.cpp  The_Rule_of_Five_in_CPP.cpp  ThreadPool.cpp  cycle_problem_shred_ptr  cycle_problem_shred_ptr.cpp  dangling_reference.cpp  data.csv  dynamic _cast.cpp  funtion_pointer.cpp  gdb.cpp  gdb_command.txt  no_exxcept.cpp  out  parsingData.cpp  parsing_tokenise_scanning.cpp  question1.cpp  static_casting.cpp  xyz.cpp
MultiThreadingConcept/: HowToCreateThread.cpp  Readme.txt  out  print_Even_Odd.cpp  try_lock.cpp
SOCKET_PROGRAMMING/: CMakeLists.txt  server
Shell_Scripting/: hello.sh
Thermostat/: main.cpp
(+17 files in other folders)
